[gd_scene load_steps=4 format=3 uid="uid://cs8ljt4vij8lx"]

[ext_resource type="Theme" uid="uid://dxajxgr6yuec0" path="res://player/inventory/hotbar/hotbarSlot/hotbarSlot.tres" id="1_nufiw"]
[ext_resource type="Script" path="res://player/inventory/slot/slot.gd" id="2_oo7ql"]
[ext_resource type="PackedScene" uid="uid://u01q4h3q3nq4" path="res://player/inventory/item/item.tscn" id="3_buvwi"]

[node name="Slot" type="Panel"]
custom_minimum_size = Vector2(64, 64)
theme = ExtResource("1_nufiw")
script = ExtResource("2_oo7ql")
itemClass = ExtResource("3_buvwi")

[node name="itemLocation" type="Node2D" parent="."]
position = Vector2(5, 5)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
